--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,6 +1,6 @@
 <?php echo $this->doctype(); ?>
 
-<html lang="en">
+<html lang="en" ng-app="SnsExam">
     <head>
         <meta charset="utf-8">
         <?php echo $this->headTitle('ZF2 '. $this->translate('Skeleton Application'))->setSeparator(' - ')->setAutoEscape(false) ?>
@@ -21,7 +21,7 @@
             ->prependFile($this->basePath('js/jquery.min.js'))
             ->prependFile($this->basePath('js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
             ->prependFile($this->basePath('js/html5shiv.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
-            ->prependFile($this->basePath('js/fb_login.js'))
+            // ->prependFile($this->basePath('js/fb_login.js'))
         ; ?>
 
     </head>
@@ -51,6 +51,7 @@
             </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript()
+            ->prependFile($this->basePath('app/app.js'))
             ->prependFile($this->basePath('js/angular-route.min.js'))
             ->prependFile($this->basePath('js/angular-resource.min.js'))
             ->prependFile($this->basePath('js/angular.min.js'))
