--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,5 +1,9 @@
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<div id="fb-root"></div>
+<fb:login-button scope="public_profile,email" onlogin="loginStatus();">
 </fb:login-button>
 
 <div id="status">
+    {{ loginResponse.status }}
 </div>
+
+<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
