--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -25,7 +25,7 @@
         ; ?>
 
     </head>
-    <body>
+    <body ng-controller="IndexController">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -43,7 +43,7 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
-        <div class="container">
+        <div class="container" ng-init="checkLoginState()">
             <?php echo $this->content; ?>
             <hr>
             <footer>
@@ -51,6 +51,10 @@
             </footer>
         </div> <!-- /container -->
         <?php echo $this->inlineScript()
+            ->prependFile($this->basePath('app/IndexController.js'))
+
+            ->prependFile($this->basePath('app/fb_login_config.js'))
+            ->prependFile($this->basePath('js/ngFacebook.js'))
             ->prependFile($this->basePath('app/app.js'))
             ->prependFile($this->basePath('js/angular-route.min.js'))
             ->prependFile($this->basePath('js/angular-resource.min.js'))
