--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -43,6 +43,8 @@
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
+
+        <!-- checkLoginState() fetch data/ check login state -->
         <div class="container" ng-init="checkLoginState()">
             <?php echo $this->content; ?>
             <hr>
