--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,5 +1,23 @@
-<div id="status">
-    {{ loginResponse.status }}
-</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8">
+            <div id="status">
+                {{ loginResponse.status }}
+            </div>
 
-<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
+            <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
+
+            <br />
+
+            <form class="form-inline topic-create-box">
+              <div class="form-group">
+                <input type="text" class="form-control" id="topic_title" placeholder="Topic" ng-model="topic.title">
+              </div>
+              <button type="submit" class="btn btn-default" ng-click="createTopic()">create topic!</button>
+            </form>
+
+
+            <br />
+        </div>
+    </div>
+</div>
